--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ plugin_upload_audit.xlsx__pycache__/
 scanned_plugins/*
 plugins/*
 plugin_upload_audit.csv
+saved_sources/*
+saved_zips/*
 # Ignore Python cache files
 __pycache__/
